--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-modal-video": "^1.2.3",
     "bootstrap": "^5.3.2",
     "gsap": "^3.12.5",
+    "http-proxy-middleware": "^3.0.0",
     "next": "14.1.0",
     "react": "^18",
     "react-18-image-lightbox": "^5.1.4",
