--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "@types/node": "^20.11.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5"
   }
 }
