--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/react-modal-video": "^1.2.3",
     "bootstrap": "^5.3.2",
+    "clsx": "^2.1.1",
     "gsap": "^3.12.5",
     "http-proxy-middleware": "^3.0.0",
     "lucide": "^0.427.0",
@@ -26,7 +27,8 @@
     "react-modal-video": "^2.0.1",
     "react-use": "^17.5.0",
     "sass": "^1.70.0",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
