added price component

--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react-intersection-observer": "^9.7.0",
     "react-modal-image": "^2.6.0",
     "react-modal-video": "^2.0.1",
+    "react-slick": "^0.30.2",
     "react-use": "^17.5.0",
     "sass": "^1.70.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.5.2"
   },
