--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-18-image-lightbox": "^5.1.4",
+    "react-accessible-accordion": "^5.0.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
