--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,6 @@
       "@/plugins/*": ["./src/plugins/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/data/api_services.js"],
   "exclude": ["node_modules"]
 }
