--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-18-image-lightbox": "^5.1.4",
     "react-countup": "^6.5.0",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.7.0",
     "react-modal-image": "^2.6.0",
     "react-modal-video": "^2.0.1",
@@ -30,6 +31,7 @@
     "@types/node": "^20.11.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-icons": "^2.2.7",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
