--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-modal-video": "^2.0.1",
     "react-use": "^17.5.0",
     "sass": "^1.70.0",
+    "sharp": "^0.34.2",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
