--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "gsap": "^3.12.5",
     "http-proxy-middleware": "^3.0.0",
     "lucide-react": "^0.523.0",
-    "next": "14.1.0",
+    "next": "^14.1.0",
     "react": "^18",
     "react-18-image-lightbox": "^5.1.4",
     "react-countup": "^6.5.0",
